--- a/VayCayPlannerWeb/Views/_ViewImports.cshtml
+++ b/VayCayPlannerWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using VayCayPlannerWeb
 @using VayCayPlannerWeb.Models
+@using VayCayPlannerWeb.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
