--- a/VayCayPlannerWeb/Views/Shared/_LoginPartial.cshtml
+++ b/VayCayPlannerWeb/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using VayCayPlannerWeb.Data.Extensions;
+@inject SignInManager<Subscriber> SignInManager
+@inject UserManager<Subscriber> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
