--- a/VayCayPlannerWeb/Views/Lodgings/Delete.cshtml
+++ b/VayCayPlannerWeb/Views/Lodgings/Delete.cshtml
@@ -1,15 +1,14 @@
-﻿@*@model VayCayPlannerWeb.Data.Models.Trip*@
-@model VayCayPlannerWeb.Models.ViewModels.Trip_vm
+﻿@model VayCayPlannerWeb.Data.Models.Lodging
 
 @{
-    ViewData["Title"] = "Delete a Trip";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Delete a Trip</h1>
+<h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Trip</h4>
+    <h4>Lodging</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -19,48 +18,54 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.CheckInDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.CheckInDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
+            @Html.DisplayNameFor(model => model.CheckOutDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
+            @Html.DisplayFor(model => model.CheckOutDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EndDate)
+            @Html.DisplayNameFor(model => model.MaxOccupancy)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
+            @Html.DisplayFor(model => model.MaxOccupancy)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Duration)
+            @Html.DisplayNameFor(model => model.Nights)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Duration)
+            @Html.DisplayFor(model => model.Nights)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DepartInDays)
+            @Html.DisplayNameFor(model => model.CleaningFees)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DepartInDays)
+            @Html.DisplayFor(model => model.CleaningFees)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalTravelers)
+            @Html.DisplayNameFor(model => model.OtherFees)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TotalTravelers)
+            @Html.DisplayFor(model => model.OtherFees)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalDestinations)
+            @Html.DisplayNameFor(model => model.TotalCost)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TotalDestinations)
+            @Html.DisplayFor(model => model.TotalCost)
         </dd>
-@*        <dt class = "col-sm-2">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.WebLink)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.WebLink)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedDate)
         </dt>
         <dd class = "col-sm-10">
@@ -71,7 +76,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ModifiedDate)
-        </dd>*@
+        </dd>
     </dl>
     
     <form asp-action="Delete">
