--- a/VayCayPlannerWeb/Views/Travelers/Index.cshtml
+++ b/VayCayPlannerWeb/Views/Travelers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<VayCayPlannerWeb.Data.Models.Traveler>
+﻿@model IEnumerable<VayCayPlannerWeb.Models.ViewModels.Traveler_vm>
 
 @{
     ViewData["Title"] = "Travelers";
@@ -7,7 +7,7 @@
 <h1>Travelers</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create a New Traveler</a>
 </p>
 <table class="table">
     <thead>
@@ -27,7 +27,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.isActive)
             </th>
-            <th>
+@*            <th>
                 @Html.DisplayNameFor(model => model.PrimaryRoleId)
             </th>
             <th>
@@ -38,7 +38,7 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ModifiedDate)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -60,7 +60,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.isActive)
             </td>
-            <td>
+@*            <td>
                 @Html.DisplayFor(modelItem => item.PrimaryRoleId)
             </td>
             <td>
@@ -71,7 +71,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ModifiedDate)
-            </td>
+            </td>*@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
