--- a/VayCayPlannerWeb/Views/Trips/Create.cshtml
+++ b/VayCayPlannerWeb/Views/Trips/Create.cshtml
@@ -1,12 +1,13 @@
-﻿@model VayCayPlannerWeb.Data.Models.Trip
+﻿@*@model VayCayPlannerWeb.Data.Models.Trip*@
+@model VayCayPlannerWeb.Models.ViewModels.Trip_vm
 
 @{
-    ViewData["Title"] = "Create a new Trip";
+    ViewData["Title"] = "Create+";
 }
 
 <h1>Create a new Trip</h1>
 
-<h4>Trip</h4>
+@*<h4>Trip</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -52,7 +53,7 @@
                 <input asp-for="TotalDestinations" class="form-control" />
                 <span asp-validation-for="TotalDestinations" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*            <div class="form-group">
                 <label asp-for="CreatedDate" class="control-label"></label>
                 <input asp-for="CreatedDate" class="form-control" />
                 <span asp-validation-for="CreatedDate" class="text-danger"></span>
@@ -61,7 +62,7 @@
                 <label asp-for="ModifiedDate" class="control-label"></label>
                 <input asp-for="ModifiedDate" class="form-control" />
                 <span asp-validation-for="ModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
