--- a/VayCayPlannerWeb/Views/Trips/Edit.cshtml
+++ b/VayCayPlannerWeb/Views/Trips/Edit.cshtml
@@ -1,12 +1,13 @@
-﻿@model VayCayPlannerWeb.Data.Models.Trip
+﻿@*@model VayCayPlannerWeb.Data.Models.Trip*@
+@model VayCayPlannerWeb.Models.ViewModels.Trip_vm
 
 @{
     ViewData["Title"] = "Edit Trip";
 }
 
-<h1>Edit Trip</h1>
+<h1>Edit the [@Model.Name] Trip</h1>
 
-<h4>Trip</h4>
+@*<h4>Trip</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -53,7 +54,7 @@
                 <span asp-validation-for="TotalDestinations" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+@*            <div class="form-group">
                 <label asp-for="CreatedDate" class="control-label"></label>
                 <input asp-for="CreatedDate" class="form-control" />
                 <span asp-validation-for="CreatedDate" class="text-danger"></span>
@@ -62,9 +63,9 @@
                 <label asp-for="ModifiedDate" class="control-label"></label>
                 <input asp-for="ModifiedDate" class="form-control" />
                 <span asp-validation-for="ModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save Changes" class="btn btn-primary" />
             </div>
         </form>
     </div>
