--- a/VayCayPlannerWeb/Views/Trips/Index.cshtml
+++ b/VayCayPlannerWeb/Views/Trips/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<VayCayPlannerWeb.Data.Models.Trip>
+﻿@*@model IEnumerable<VayCayPlannerWeb.Data.Models.Trip>*@
+@model IEnumerable<VayCayPlannerWeb.Models.ViewModels.Trip_vm>
 
 @{
     ViewData["Title"] = "Trips";
@@ -37,10 +38,10 @@
                 @Html.DisplayNameFor(model => model.TotalDestinations)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreatedDate)
+@*                @Html.DisplayNameFor(model => model.CreatedDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ModifiedDate)
+                @Html.DisplayNameFor(model => model.ModifiedDate)*@
             </th>
             <th></th>
         </tr>
@@ -73,17 +74,48 @@
                 @Html.DisplayFor(modelItem => item.TotalDestinations)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
+@*                @Html.DisplayFor(modelItem => item.CreatedDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ModifiedDate)
+                @Html.DisplayFor(modelItem => item.ModifiedDate)*@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" class="btn btn-danger deleteBtn"  asp-route-id="@item.Id">Delete</a>
+                <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button">Delete Me</button>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<form id="deleteForm" asp-action="Delete">   
+    <input type="hidden" id="tripId" name="Id"/>
+</form>
+
+@*sweet client side lib*@
+@section Scripts{
+    <script>
+        $(function(){
+            $('.deleteBtn').click(function(e) {
+                swal({
+                    title: "Are you sure?",
+                    text: "Are you sure you want to delete",
+                    icon: "warning",
+                    buttons: true,
+                    dangerMode: true
+                }).then((confirm) => {
+                    if(confirm){
+                        var btn = $(this);
+                        var id = btn.data("id");
+                        $('#tripId').val(id);
+                        $('#deleteForm').submit();
+                    }
+                });
+            });
+        });
+
+    </script>
+
+}
