--- a/VayCayPlannerWeb/Views/Trips/Index.cshtml
+++ b/VayCayPlannerWeb/Views/Trips/Index.cshtml
@@ -80,10 +80,11 @@
                 @Html.DisplayFor(modelItem => item.ModifiedDate)*@
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" class="btn btn-danger deleteBtn"  asp-route-id="@item.Id">Delete</a>
-                <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button">Delete Me</button>
+                @*https://fontawesome.com/search to search for more icons*@
+                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-pen"></i></a> 
+                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fa-sharp fa-solid fa-circle-info"></i></a>
+                @*<a asp-action="Delete" class="btn btn-danger deleteBtn"  asp-route-id="@item.Id">Delete</a>*@
+                <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="fa-solid fa-trash-can"></i></button>
             </td>
         </tr>
 }
@@ -98,6 +99,8 @@
 @section Scripts{
     <script>
         $(function(){
+            $('.table').DataTable();
+            //https://datatables.net/examples/styling/bootstrap5
             $('.deleteBtn').click(function(e) {
                 swal({
                     title: "Are you sure?",
