--- a/VayCayPlannerWeb/Views/Trips/Index.cshtml
+++ b/VayCayPlannerWeb/Views/Trips/Index.cshtml
@@ -9,6 +9,7 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+    
 </p>
 <table class="table">
     <thead>
@@ -83,8 +84,10 @@
                 @*https://fontawesome.com/search to search for more icons*@
                 <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-pen"></i></a> 
                 <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fa-sharp fa-solid fa-circle-info"></i></a>
-                @*<a asp-action="Delete" class="btn btn-danger deleteBtn"  asp-route-id="@item.Id">Delete</a>*@
+                    <a class="btn btn-info" asp-controller="Destinations" asp-action="Create" asp-route-id="@item.Id">Add Destination</a>
+                @*<a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fa-sharp fa-solid fa-circle-info"></i></a>*@
                 <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="fa-solid fa-trash-can"></i></button>
+                @*<button data-id="@item.Id" class="btn btn-info" asp-action="Create" asp-route="Destinations/Create">Create New Destination</buttona>*@
             </td>
         </tr>
 }
@@ -100,7 +103,7 @@
     <script>
         $(function(){
             $('.table').DataTable();
-            //https://datatables.net/examples/styling/bootstrap5
+            ////https://datatables.net/examples/styling/bootstrap5
             $('.deleteBtn').click(function(e) {
                 swal({
                     title: "Are you sure?",
