Added Identity roles and default users

--- a/VayCayPlannerWeb/Views/Trips/Index.cshtml
+++ b/VayCayPlannerWeb/Views/Trips/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@*@model IEnumerable<VayCayPlannerWeb.Data.Models.Trip>*@
 @model IEnumerable<VayCayPlannerWeb.Models.ViewModels.Trip_vm>
+@*@inject IEnumerable<VayCayPlannerWeb.Data.Models.Destinations>*@
 
 @{
     ViewData["Title"] = "Trips";
