--- a/VayCayPlannerWeb/Views/_ViewImports.cshtml
+++ b/VayCayPlannerWeb/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using VayCayPlannerWeb
 @using VayCayPlannerWeb.Models
 @using VayCayPlannerWeb.Data
+@using VayCayPlannerWeb.Constants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
