--- a/VayCayPlannerWeb/Views/Destinations/Create.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model VayCayPlannerWeb.Data.Models.Destination
+﻿@model VayCayPlannerWeb.Models.ViewModels.Destination_vm
 
 @{
     ViewData["Title"] = "Create a Destination";
@@ -53,6 +53,11 @@
                 <span asp-validation-for="PackageId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="TripId" class="control-label"></label>
+                <input asp-for="TripId" class="form-control" />
+                <span asp-validation-for="TripId" class="text-danger"></span>
+            </div>
+@*            <div class="form-group">
                 <label asp-for="CreatedDate" class="control-label"></label>
                 <input asp-for="CreatedDate" class="form-control" />
                 <span asp-validation-for="CreatedDate" class="text-danger"></span>
@@ -61,7 +66,7 @@
                 <label asp-for="ModifiedDate" class="control-label"></label>
                 <input asp-for="ModifiedDate" class="form-control" />
                 <span asp-validation-for="ModifiedDate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
