Created the add a destination to a Trip and the view destinations in a trip

--- a/VayCayPlannerWeb/Views/Destinations/Details.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model VayCayPlannerWeb.Data.Models.Destination
 
 @{
-    ViewData["Title"] = "Destination Details";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Destination Details</h1>
+<h1>Details</h1>
 
 <div>
     <h4>Destination</h4>
@@ -57,6 +57,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PackageId)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Trip)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Trip.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedDate)
