--- a/VayCayPlannerWeb/Views/Destinations/Create.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model VayCayPlannerWeb.Models.ViewModels.Destination_vm
+﻿@model VayCayPlannerWeb.Models.ViewModels.Destination_vm;
+@*@using VayCayPlannerWeb.Models.ViewModels.Trip_vm;*@
 
 @{
     ViewData["Title"] = "Create a Destination";
@@ -12,6 +13,16 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    Your Trips
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+
+                </ul>
+            </div>
+
             <div class="form-group">
                 <label asp-for="CityName" class="control-label"></label>
                 <input asp-for="CityName" class="form-control" />
@@ -52,24 +63,33 @@
                 <input asp-for="PackageId" class="form-control" />
                 <span asp-validation-for="PackageId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="TripId" class="control-label"></label>
-                <input asp-for="TripId" class="form-control" />
-                <span asp-validation-for="TripId" class="text-danger"></span>
-            </div>
 @*            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ModifiedDate" class="control-label"></label>
-                <input asp-for="ModifiedDate" class="form-control" />
-                <span asp-validation-for="ModifiedDate" class="text-danger"></span>
+                <label asp-for="TripName" class="control-label" ></label>
+                <select id="ddlTrips" name="Id" asp-items="SelectList">
+                    <option value="0">Select the Trip</option>
+                </select>
+                <input type="hidden" name="Name"/>
+                <span asp-validation-for="TripId" class="text-danger"></span>
             </div>*@
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+            <script type="text/javascript">
+                $("body").on("change", "#ddlTrips", function () {
+                    $("input[name=Name]").val($(this).find("option:selected").text());
+                });
+            </script>
+
+            @if (ViewBag.Message != null)
+            {
+                <script type="text/javascript">
+                    $(function () {
+                        alert("@ViewBag.Message");
+                    });
+                </script>
+            }
+            
         </form>
     </div>
 </div>
