--- a/VayCayPlannerWeb/Views/Destinations/Delete.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model VayCayPlannerWeb.Data.Models.Destination
 
 @{
-    ViewData["Title"] = "Delete a Destination";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Delete a Destination</h1>
+<h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -58,6 +58,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PackageId)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Trip)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Trip.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedDate)
