--- a/VayCayPlannerWeb/Views/Destinations/Edit.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Edit.cshtml
@@ -1,12 +1,13 @@
-﻿@model VayCayPlannerWeb.Data.Models.Destination
+﻿@model VayCayPlannerWeb.Models.ViewModels.Destination_vm;
+@using VayCayPlannerWeb.Models.ViewModels;
 
 @{
-    ViewData["Title"] = "Edit a Destination ";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Edit a Destination </h1>
+<h1>Edit</h1>
 
-<h4>Destination</h4>
+<h4>Destination @Html.ValueFor(model => model.TripName)</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,11 +33,11 @@
                 <input asp-for="DepartureDate" class="form-control" />
                 <span asp-validation-for="DepartureDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*            <div class="form-group">
                 <label asp-for="Duration" class="control-label"></label>
                 <input asp-for="Duration" class="form-control" />
                 <span asp-validation-for="Duration" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="isMealsIncluded" /> @Html.DisplayNameFor(model => model.isMealsIncluded)
@@ -52,17 +53,13 @@
                 <input asp-for="PackageId" class="form-control" />
                 <span asp-validation-for="PackageId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ModifiedDate" class="control-label"></label>
-                <input asp-for="ModifiedDate" class="form-control" />
-                <span asp-validation-for="ModifiedDate" class="text-danger"></span>
-            </div>
+@*            <div class="form-group">
+                <label asp-for="TripId" class="control-label"></label>
+                <select asp-for="TripId" class="form-control" asp-items="ViewBag.TripId"></select>
+                <span asp-validation-for="TripId" class="text-danger"></span>
+            </div>*@
+            <input type="hidden" asp-for="TripId" />
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
