--- a/VayCayPlannerWeb/Views/Destinations/TripDestinations.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/TripDestinations.cshtml
@@ -1,10 +1,15 @@
 ﻿@model IEnumerable<VayCayPlannerWeb.Models.ViewModels.Destination_vm>
 
 @{
-    ViewData["Title"] = "All Destinations";
+    ViewData["Title"] = "Trip Destinations";
 }
 
-<h1>All Destinations</h1>
+@{
+    var trip = ViewData["Trip"]
+        as VayCayPlannerWeb.Data.Models.Trip;
+}
+
+<h1>Destinations for: @trip.Name</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -12,9 +17,7 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TripName)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.CityName)
             </th>
@@ -46,9 +49,7 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TripName)
-            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.CityName)
             </td>
@@ -74,13 +75,10 @@
                 @Html.DisplayFor(modelItem => item.PackageId)
             </td>
 
-
             <td>
-                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
-                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-pen"></i></a>
-                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fa-sharp fa-solid fa-circle-info"></i></a>
-                @*<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-                    <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="fa-solid fa-trash-can"></i></button>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
@@ -115,24 +113,25 @@
             });
         });
 
-        //$('.destinationBtn').click(function (e) {
-        //    swal({
-        //        title: "Add a Destination",
-        //        //text: item.Name,
-        //        icon: "information",
-        //        buttons: true,
-        //        dangerMode: true
-        //    }).then((confirm) => {
-        //        if (confirm) {
-        //            var btn = $(this);
-        //            var id = btn.data("id");
-        //            $('#ForThisTripId').val(id);
-        //            $('#destinationForm').submit();
-        //        }
-        //    });
-        //});
+                //$('.destinationBtn').click(function (e) {
+                //    swal({
+                //        title: "Add a Destination",
+                //        //text: item.Name,
+                //        icon: "information",
+                //        buttons: true,
+                //        dangerMode: true
+                //    }).then((confirm) => {
+                //        if (confirm) {
+                //            var btn = $(this);
+                //            var id = btn.data("id");
+                //            $('#ForThisTripId').val(id);
+                //            $('#destinationForm').submit();
+                //        }
+                //    });
+                //});
 
 
     </script>
 
 }
+
