--- a/VayCayPlannerWeb/Views/Trips/Create.cshtml
+++ b/VayCayPlannerWeb/Views/Trips/Create.cshtml
@@ -33,7 +33,7 @@
                 <input asp-for="EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*          <div class="form-group">
                 <label asp-for="Duration" class="control-label"></label>
                 <input asp-for="Duration" class="form-control" />
                 <span asp-validation-for="Duration" class="text-danger"></span>
@@ -42,17 +42,17 @@
                 <label asp-for="DepartInDays" class="control-label"></label>
                 <input asp-for="DepartInDays" class="form-control" />
                 <span asp-validation-for="DepartInDays" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+@*            <div class="form-group">
                 <label asp-for="TotalTravelers" class="control-label"></label>
                 <input asp-for="TotalTravelers" class="form-control" />
                 <span asp-validation-for="TotalTravelers" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+@*            <div class="form-group">
                 <label asp-for="TotalDestinations" class="control-label"></label>
                 <input asp-for="TotalDestinations" class="form-control" />
                 <span asp-validation-for="TotalDestinations" class="text-danger"></span>
-            </div>
+            </div>*@
 @*            <div class="form-group">
                 <label asp-for="CreatedDate" class="control-label"></label>
                 <input asp-for="CreatedDate" class="form-control" />
@@ -73,4 +73,54 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+<form id="destinationForm" asp-controller="Destinations" asp-action="Create">
+    <input type="submit" value="Create" id="tripId" name="Id" />
+    @*<a class="dropdown-item" asp-controller="Destinations" asp-action="Create">Add Destinations</a>*@
+</form>
+
+@section Scripts{
+    <script>
+        //$(function(){
+        //    $('.table').DataTable();
+        //    ////https://datatables.net/examples/styling/bootstrap5
+        //    $('.deleteBtn').click(function(e) {
+        //        swal({
+        //            title: "Are you sure?",
+        //            text: "Are you sure you want to delete",
+        //            icon: "warning",
+        //            buttons: true,
+        //            dangerMode: true
+        //        }).then((confirm) => {
+        //            if(confirm){
+        //                var btn = $(this);
+        //                var id = btn.data("id");
+        //                $('#tripId').val(id);
+        //                $('#deleteForm').submit();
+        //            }
+        //        });
+        //    });
+        //});
+        $(function () {
+            $('.destinationBtn').click(function (e) {
+                swal({
+                    title: "Add a Destination",
+                    text: "Add a new Trip Destination",
+                    icon: "information",
+                    buttons: true,
+                    dangerMode: true
+                }).then((confirm) => {
+                    if (confirm) {
+                        var btn = $(this);
+                        var id = btn.data("id");
+                        $('#tripId').val(id);
+                        $('#destinationForm').submit();
+                    }
+                });
+            });
+        });
+
+    </script>
+
+}
 
