--- a/VayCayPlannerWeb/Views/Destinations/Edit.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Edit.cshtml
@@ -68,6 +68,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="TripDestinations" asp-route-id="@Model?.TripId">Back to List</a>
 </div>
 
