--- a/VayCayPlannerWeb/Views/Destinations/Index.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>All Destinations</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @*<a asp-action="Create">Create New</a>*@
 </p>
 <table class="table">
     <thead>
@@ -80,7 +80,7 @@
                 <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-pen"></i></a>
                 <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fa-sharp fa-solid fa-circle-info"></i></a>
                 @*<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-                    <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="fa-solid fa-trash-can"></i></button>
+                <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="fa-solid fa-trash-can"></i></button>
             </td>
         </tr>
 }
