--- a/VayCayPlannerWeb/Views/Destinations/TripDestinations.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/TripDestinations.cshtml
@@ -12,7 +12,8 @@
 <h1>Destinations for: @trip.Name</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @*<a asp-action="Create">Create New</a>*@
+    <button data-id="@trip.Id" class="btn btn-primary destinationBtn" asp-route-id="@trip.Id" type="button"> Add Destination</button>
 </p>
 <table class="table">
     <thead>
@@ -33,15 +34,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.Duration)
             </th>
-            <th>
+@*            <th>
                 @Html.DisplayNameFor(model => model.isMealsIncluded)
-            </th>
-            <th>
+            </th>*@
+@*            <th>
                 @Html.DisplayNameFor(model => model.isActivityIncluded)
-            </th>
-            <th>
+            </th>*@
+@*            <th>
                 @Html.DisplayNameFor(model => model.PackageId)
-            </th>
+            </th>*@
 
             <th></th>
         </tr>
@@ -65,20 +66,23 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Duration)
             </td>
-            <td>
+@*            <td>
                 @Html.DisplayFor(modelItem => item.isMealsIncluded)
-            </td>
-            <td>
+            </td>*@
+@*            <td>
                 @Html.DisplayFor(modelItem => item.isActivityIncluded)
-            </td>
-            <td>
+            </td>*@
+@*            <td>
                 @Html.DisplayFor(modelItem => item.PackageId)
-            </td>
+            </td>*@
 
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-pen"></i></a>
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fa-sharp fa-solid fa-circle-info"></i></a>
+                    <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="fa-solid fa-trash-can"></i></button>
+@*                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
             </td>
         </tr>
 }
@@ -88,13 +92,16 @@
 <form id="deleteForm" asp-action="Delete">
     <input type="hidden" id="Id" name="Id" />
 </form>
+<form id="destinationForm" asp-action="PopulateTrip" asp-controller="Destinations">
+    <input type="hidden" asp-controller="Destinations" asp-action="PopulateTrip" id="AddToTripId" name="Id" />
+</form>
 
 @*sweet client side lib*@
 @section Scripts{
     <script>
         $(function () {
             $('.table').DataTable();
-            ////https://datatables.net/examples/styling/bootstrap5
+            
             $('.deleteBtn').click(function (e) {
                 swal({
                     title: "Are you sure?",
@@ -113,22 +120,22 @@
             });
         });
 
-                //$('.destinationBtn').click(function (e) {
-                //    swal({
-                //        title: "Add a Destination",
-                //        //text: item.Name,
-                //        icon: "information",
-                //        buttons: true,
-                //        dangerMode: true
-                //    }).then((confirm) => {
-                //        if (confirm) {
-                //            var btn = $(this);
-                //            var id = btn.data("id");
-                //            $('#ForThisTripId').val(id);
-                //            $('#destinationForm').submit();
-                //        }
-                //    });
-                //});
+        $('.destinationBtn').click(function (e) {
+            swal({
+                title: "Add a Destination",
+                text: "Adding a Destination",
+                icon: "information",
+                buttons: true,
+                dangerMode: true
+            }).then((confirm) => {
+                if (confirm) {
+                    var btn = $(this);
+                    var id = btn.data("id");
+                    $('#AddToTripId').val(id);
+                    $('#destinationForm').submit();
+                }
+            });
+        });
 
 
     </script>
