Worked on the Home controller and all the return actions for Destinations

--- a/VayCayPlannerWeb/Views/Destinations/Details.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Trip Name: @Model.TripName</h1>
 
 <div>
-    <h4>Destination</h4>
+    <h4>Destination Detail</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
