--- a/VayCayPlannerWeb/Views/Destinations/Edit.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Edit.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Trip Name: @Model.TripName</h1>
 
-<h4>Destination @Html.ValueFor(model => model.TripName)</h4>
+<h4>Edit Destination</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,11 +33,6 @@
                 <input asp-for="DepartureDate" class="form-control" />
                 <span asp-validation-for="DepartureDate" class="text-danger"></span>
             </div>
-@*            <div class="form-group">
-                <label asp-for="Duration" class="control-label"></label>
-                <input asp-for="Duration" class="form-control" />
-                <span asp-validation-for="Duration" class="text-danger"></span>
-            </div>*@
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="isMealsIncluded" /> @Html.DisplayNameFor(model => model.isMealsIncluded)
@@ -53,11 +48,7 @@
                 <input asp-for="PackageId" class="form-control" />
                 <span asp-validation-for="PackageId" class="text-danger"></span>
             </div>
-@*            <div class="form-group">
-                <label asp-for="TripId" class="control-label"></label>
-                <select asp-for="TripId" class="form-control" asp-items="ViewBag.TripId"></select>
-                <span asp-validation-for="TripId" class="text-danger"></span>
-            </div>*@
+
             <input type="hidden" asp-for="TripId" />
 
             <div class="form-group">
