--- a/VayCayPlannerWeb/Views/Home/Index.cshtml
+++ b/VayCayPlannerWeb/Views/Home/Index.cshtml
@@ -3,6 +3,13 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to the family VayCay Planner</h1>
+
+    <p>Register your email address and build your next family vacation experience with VayCay.</p>
+    <button data-id="TravelerId" class="btn btn-primary destinationBtn" asp-route-id="Id" type="button"> Create Account</button>
+    <button data-id="TravelerId" class="btn btn-primary destinationBtn" asp-route-id="Id" type="button"> Manage Profile</button>
+    <button data-id="TravelerId" class="btn btn-primary destinationBtn" asp-route-id="Id" type="button"> Create Travel Group</button>
+
 </div>
+
+
