--- a/VayCayPlannerWeb/Views/Destinations/Delete.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Delete.cshtml
@@ -1,10 +1,10 @@
-﻿@model VayCayPlannerWeb.Data.Models.Destination
+﻿@model VayCayPlannerWeb.Models.ViewModels.Destination_vm;
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Trip Name: @Model.TripName</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -59,24 +59,13 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PackageId)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Trip)
+@*        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Trip.Id)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Trip.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedDate)
-        </dd>
+        </dd>*@
+
     </dl>
     
     <form asp-action="Delete">
