Schema changes to add ownership to all existing objects

--- a/VayCayPlannerWeb/Views/Shared/_Layout.cshtml
+++ b/VayCayPlannerWeb/Views/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-controller="Trips" asp-action="Create">Add a Trip</a></li>
-                                <li><a class="dropdown-item" asp-controller="Travelers" asp-action="Create">Add Travelers</a></li>
-                                <li><a class="dropdown-item" asp-controller="TravelGroups" asp-action="Create">Travel Groups</a></li>
-                                <li><a class="dropdown-item" asp-controller="Destinations" asp-action="Create">Add Destinations</a></li>
+                                <li><a class="dropdown-item" asp-controller="Travelers" asp-action="Create">Add Traveler</a></li>
+                                <li><a class="dropdown-item" asp-controller="TravelGroups" asp-action="Create">Add Travel Group</a></li>
+                                <li><a class="dropdown-item" asp-controller="Destinations" asp-action="Create">Add Destination</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" asp-controller="Packages" asp-action="Create">Add Packages</a></li>
                             </ul>
